force-app/main/default/objects/FSC_Field_Mapping__mdt/FSC_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>USE IN FSC</description>
    <label>FSC Field Mapping</label>
    <pluralLabel>FSC Field Mapping</pluralLabel>
</CustomObject>