force-app/main/default/objects/FSC_Field_Mapping__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>