force-app/main/default/objects/FSC_Field_Mapping__mdt/fields/FSC_Field_API__c.field-meta.xml
<CustomField>
    <fullName>FSC_Field_API__c</fullName>
    <description>FSC</description>
    <label>FSC Field API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>