force-app/main/default/objects/FSC_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FSC</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>