force-app/main/default/objects/FSC_Field_Mapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>FSC</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>