force-app/main/default/objects/FSC_Field_Mapping__mdt/fields/SF_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Object_Name__c</fullName>
    <description>FSC</description>
    <label>SF Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>