force-app/main/default/objects/FSC_Field_Mapping__mdt/listViews/FSC.listView-meta.xml
<ListView>
    <fullName>FSC</fullName>
    <columns>MasterLabel</columns>
    <columns>Order__c</columns>
    <columns>SF_Field_API__c</columns>
    <columns>FSC_Field_API__c</columns>
    <columns>SF_Object_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>FSC</label>
</ListView>